# voicegateway

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RELEASING.md  TODO.md  docker-compose.yml  pyproject.toml  voicegw.example.yaml
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  fly-deploy-validation.yml  test-coverage.yml
dashboard/: Dockerfile
dashboard/api/: main.py
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
dashboard/frontend/src/: App.tsx  index.css
dashboard/frontend/src/components/: CostChart.tsx  LatencyChart.tsx  LogTable.tsx  NeoTooltip.tsx  PageHeader.tsx  SourceBadge.tsx  StatusCard.tsx
dashboard/frontend/src/lib/: api.ts  types.ts  ui.ts
dashboard/frontend/src/pages/: Costs.tsx  Latency.tsx  Login.tsx  Logs.tsx  Models.tsx  Overview.tsx  Projects.tsx  Settings.tsx
deploy/fly/: README.md  deploy.sh  fly.toml
docker/: README.dashboard.md  README.voicegateway.md
docs/: index.md  mcp.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/api/: dashboard-api.md  http-api.md  index.md  python-sdk.md
docs/architecture/: config-layers.md  gateway-core.md  index.md  middleware.md  provider-abstraction.md  security.md  storage.md
docs/cli/: costs.md  dashboard.md  index.md  init.md  logs.md  mcp.md  projects.md  serve.md  status.md
docs/configuration/: environment-variables.md  models.md  observability.md  projects.md  providers.md  stacks.md  voicegw-yaml.md
docs/contributing/: adding-a-provider.md  code-style.md  development-setup.md  index.md  testing.md
docs/examples/: basic-voice-agent.md  budget-enforcement.md  claude-code-integration.md  docker-deployment.md  fallback-chains.md  fly-deployment.md  index.md  local-only.md  multi-project.md
docs/guide/: core-concepts.md  first-agent.md  installation.md  quick-start.md  what-is-voicegateway.md
docs/mcp/: authentication.md  index.md  setup.md  transports.md
docs/mcp/tools/: models.md  observability.md  projects.md  providers.md
docs/migration/: from-litellm.md  from-livekit-inference.md  version-upgrades.md
docs/reference/: changelog.md  faq.md  troubleshooting.md
examples/: basic_agent.py  fallback_agent.py  hybrid_agent.py  local_only_agent.py
tests/: conftest.py  test_budget.py  test_cli.py  test_config.py  test_cost_tracker.py  test_crypto.py  test_dashboard_api.py  test_integration.py  test_mcp_integration.py  test_mcp_tools.py  test_middleware.py  test_router.py  test_server.py  test_storage.py
tests/core/: test_model_id.py
tests/mcp/: test_auth.py  test_transport.py
tests/middleware/: test_budget.py  test_fallback.py
tests/providers/: test_ollama.py  test_whisper.py
tests/server/: test_auth.py  test_combined_server.py  test_server.py
tests/storage/: test_percentiles.py  test_storage.py
tests/test_providers/: test_ollama.py
voicegateway/: __init__.py  cli.py  combined_server.py  server.py
voicegateway/core/: auth.py  config.py  config_manager.py  crypto.py  gateway.py  model_id.py  registry.py  router.py  schema.py
voicegateway/mcp/: __init__.py  auth.py  errors.py  schemas.py  server.py
voicegateway/mcp/tools/: __init__.py  base.py  models.py  observability.py  projects.py  providers.py
voicegateway/middleware/: budget_enforcer.py  cost_tracker.py  fallback.py  instrumented_provider.py  latency_monitor.py  logger.py  rate_limiter.py
voicegateway/pricing/: catalog.py
voicegateway/providers/: anthropic_provider.py  assemblyai_provider.py  base.py  cartesia_provider.py  deepgram_provider.py  elevenlabs_provider.py  groq_provider.py  kokoro_provider.py  ollama_provider.py  openai_provider.py  piper_provider.py  whisper_provider.py
voicegateway/storage/: _percentiles.py  models.py  sqlite.py
